      "(UTF-8) Snowman" Tagliamonte for the report.  (Closes: #812962)
    + [NT] Use https URL in the correction for canonical VCS URLs.
      (Closes: #813587)
    + [NT] Bump known python 3 version to include 3.4 and 3.5.
    + [AB] package-relation-with-perl-modules: Remove "experimental" flag.
      Asked for by Dominic Hargreaves.
  * checks/files.pm:
    + [JW] Apply patch from Mathieu Parent to fix directories for PHP INI
      files.
  * checks/nmu.{desc,pm}:
    + [NT] Create a separate tag for extra whitespace around uploader name
      in the changelog.  Thanks to Ben Wiederhake for the suggestion.
      (Closes: #801647)
  * checks/phppear.{desc,pm}:
    + [JW] Apply patch from Mathieu Parent to make dh-php* and php*-dev
      package names unversioned.
  * checks/rules.pm:
    + [NT] Add ":any" to all python dependencies.  Thanks to Barry Warsaw
      for reporting the bug.
    + [NT] Bump known python 3 version to include 3.4 and 3.5.
  * checks/scripts.desc:
    + [NT] Suggest dh_python2 / dh_python3 instead of dh_pysupport and
      dh_pycentral.  Thanks to Neil Williams for the report.
      (Closes: #818607)
  * checks/shared-libs.{desc,pm}:
    + [NT] Rename and clarify some ldconfig related tags to better reflect
      the use of the ldconfig trigger.  Thanks to Rafael Laboissiere for
      reporting this.  (Closes: #809577)
    + [NT] Merge and remove some ldconfig related tags.  Notably
      unconditionally flag all uses of ldconfig in maintainer scripts
      (outside glibc) as these should be replaced by a trigger.
  * checks/version-substvars.pm:
    + [NT] Apply patch from Javier Serrano Polo that makes the check
      ignore all multi-arch quantifiers (when determining if the
      dependency is for an external package).  (Closes: #822269)

  * commands/info.pm:
    + [NT] Accept "--tag" as an alias of "--tags".  Thanks to Robert
      Luberda for the suggestion.  (Closes: #816454)
  * commands/lintian: