@@ -1,0 +1,1 @@
+E: fields-dep-without-arch-dep-binary source: build-depends-arch-without-arch-dependant-binary
